--- a/tutorial/html/parallelization/index.html
+++ b/tutorial/html/parallelization/index.html
@@ -240,7 +240,8 @@ parallelStartSocket(2)
 <pre class="prettyprint well"><code class="r">r = resample(&quot;classif.lda&quot;, iris.task, iris.rin)
 </code></pre>
 
-<pre class="prettyprint well"><code>## Exporting objects to slaves for mode socket: .mlr.slave.options
+<pre class="prettyprint well"><code>## Loading required package: MASS
+## Exporting objects to slaves for mode socket: .mlr.slave.options
 ## Mapping in parallel: mode = socket; cpus = 2; elements = 3.
 ## [Resample] Result: mmce.test.mean=0.02
 </code></pre>
