--- a/tutorial/html/benchmark_experiments/index.html
+++ b/tutorial/html/benchmark_experiments/index.html
@@ -354,20 +354,65 @@ ctrl = makeTuneControlGrid()
 inner.rdesc = makeResampleDesc(&quot;CV&quot;, iters = 3)
 
 ## Tune k-nearest neighbor
-lrn = makeTuneWrapper(&quot;classif.kknn&quot;, resampling = inner.rdesc, par.set = ps, control = ctrl)
+lrn = makeTuneWrapper(&quot;classif.kknn&quot;, resampling = inner.rdesc, par.set = ps, control = ctrl,
+    show.info = FALSE)
 
 ## Define &quot;outer&quot; bootstrap indices
 rdesc = makeResampleDesc(&quot;Bootstrap&quot;, iters = 5)
 
 ## Merge it into a benchmark experiment
 ## Choose accuracy instead of default measure mean misclassification error
-res = benchmark(lrn, iris.task, rdesc, measure = acc)
+res = benchmark(lrn, iris.task, rdesc, measure = acc, show.info = FALSE)
+res
+</code></pre>
 
-## What parameter setting achieved this performances?
+<pre class="prettyprint well"><code>##           task            learner acc.test.mean
+## 1 iris-example classif.kknn.tuned        0.9342
+</code></pre>
+
+<pre class="prettyprint well"><code class="r">## What parameter setting achieved this performances?
 getTuneResult(res)
+</code></pre>
 
-## What performances did we get in the single runs?
+<pre class="prettyprint well"><code>## $`iris-example`
+## $`iris-example`$classif.kknn.tuned
+## $`iris-example`$classif.kknn.tuned[[1]]
+## Tune result:
+## Op. pars: k=5
+## mmce.test.mean=0.0267
+## 
+## $`iris-example`$classif.kknn.tuned[[2]]
+## Tune result:
+## Op. pars: k=4
+## mmce.test.mean=0.04
+## 
+## $`iris-example`$classif.kknn.tuned[[3]]
+## Tune result:
+## Op. pars: k=5
+## mmce.test.mean=0.00667
+## 
+## $`iris-example`$classif.kknn.tuned[[4]]
+## Tune result:
+## Op. pars: k=3
+## mmce.test.mean=0.0267
+## 
+## $`iris-example`$classif.kknn.tuned[[5]]
+## Tune result:
+## Op. pars: k=2
+## mmce.test.mean=0.02
+</code></pre>
+
+<pre class="prettyprint well"><code class="r">## What performances did we get in the single runs?
 getPerformances(res)
+</code></pre>
+
+<pre class="prettyprint well"><code>## $`iris-example`
+##   iter classif.kknn.tuned.acc
+## 1    1                 0.9623
+## 2    2                 0.9245
+## 3    3                 0.9200
+## 4    4                 0.9286
+## 5    5                 0.9355
 </code></pre>
 
 <p>Of course everything works the same way if we change the resampling
@@ -387,7 +432,8 @@ ctrl = makeTuneControlGrid()
 inner.rdesc = makeResampleDesc(&quot;CV&quot;, iters = 3)
 
 ## Tune a SVM
-lrn = makeTuneWrapper(&quot;classif.ksvm&quot;, resampling = inner.rdesc, par.set = ps, control = ctrl)
+lrn = makeTuneWrapper(&quot;classif.ksvm&quot;, resampling = inner.rdesc, par.set = ps, control = ctrl,
+    show.info = FALSE)
 
 ## Three learners to be compared
 lrns = list(makeLearner(&quot;classif.lda&quot;), makeLearner(&quot;classif.rpart&quot;), lrn)
@@ -397,15 +443,110 @@ rdesc = makeResampleDesc(&quot;CV&quot;, iters = 5)
 
 ## Merge it to a benchmark experiment
 res = benchmark(lrns, tasks, rdesc, show.info = FALSE)
+res
+</code></pre>
 
-## Only for one task
+<pre class="prettyprint well"><code>##                   task            learner mmce.test.mean
+## 1 BreastCancer-example        classif.lda        0.03664
+## 2 BreastCancer-example      classif.rpart        0.06147
+## 3 BreastCancer-example classif.ksvm.tuned        0.04837
+## 4         iris-example        classif.lda        0.02000
+## 5         iris-example      classif.rpart        0.07333
+## 6         iris-example classif.ksvm.tuned        0.06000
+</code></pre>
+
+<pre class="prettyprint well"><code class="r">## Performance values in individual runs
 getPerformances(res)
+</code></pre>
 
-## Tuned parameter for SVM
+<pre class="prettyprint well"><code>## $`BreastCancer-example`
+##   iter classif.lda.mmce classif.rpart.mmce classif.ksvm.tuned.mmce
+## 1    1          0.06618            0.07353                 0.10294
+## 2    2          0.02941            0.03676                 0.02941
+## 3    3          0.02190            0.05839                 0.02190
+## 4    4          0.02920            0.09489                 0.05839
+## 5    5          0.03650            0.04380                 0.02920
+## 
+## $`iris-example`
+##   iter classif.lda.mmce classif.rpart.mmce classif.ksvm.tuned.mmce
+## 1    1          0.00000            0.03333                 0.03333
+## 2    2          0.00000            0.03333                 0.03333
+## 3    3          0.00000            0.10000                 0.03333
+## 4    4          0.06667            0.06667                 0.06667
+## 5    5          0.03333            0.13333                 0.13333
+</code></pre>
+
+<pre class="prettyprint well"><code class="r">## Tuned parameter for SVM
 getTuneResult(res)
+</code></pre>
 
-## Optimal performance of the inner (!) resampling, i.e., here 3-fold cross-validation
-#res[&quot;opt.perf&quot;, learner = &quot;classif.ksvm&quot;]
+<pre class="prettyprint well"><code>## $`BreastCancer-example`
+## $`BreastCancer-example`$classif.lda
+## NULL
+## 
+## $`BreastCancer-example`$classif.rpart
+## NULL
+## 
+## $`BreastCancer-example`$classif.ksvm.tuned
+## $`BreastCancer-example`$classif.ksvm.tuned[[1]]
+## Tune result:
+## Op. pars: C=2; sigma=0.5
+## mmce.test.mean=0.0475
+## 
+## $`BreastCancer-example`$classif.ksvm.tuned[[2]]
+## Tune result:
+## Op. pars: C=2; sigma=0.5
+## mmce.test.mean=0.0622
+## 
+## $`BreastCancer-example`$classif.ksvm.tuned[[3]]
+## Tune result:
+## Op. pars: C=2; sigma=0.5
+## mmce.test.mean=0.0586
+## 
+## $`BreastCancer-example`$classif.ksvm.tuned[[4]]
+## Tune result:
+## Op. pars: C=2; sigma=0.5
+## mmce.test.mean=0.0495
+## 
+## $`BreastCancer-example`$classif.ksvm.tuned[[5]]
+## Tune result:
+## Op. pars: C=2; sigma=0.5
+## mmce.test.mean=0.0513
+## 
+## 
+## 
+## $`iris-example`
+## $`iris-example`$classif.lda
+## NULL
+## 
+## $`iris-example`$classif.rpart
+## NULL
+## 
+## $`iris-example`$classif.ksvm.tuned
+## $`iris-example`$classif.ksvm.tuned[[1]]
+## Tune result:
+## Op. pars: C=2; sigma=0.5
+## mmce.test.mean=0.0333
+## 
+## $`iris-example`$classif.ksvm.tuned[[2]]
+## Tune result:
+## Op. pars: C=0.5; sigma=0.5
+## mmce.test.mean=0.0417
+## 
+## $`iris-example`$classif.ksvm.tuned[[3]]
+## Tune result:
+## Op. pars: C=2; sigma=0.5
+## mmce.test.mean=0.0583
+## 
+## $`iris-example`$classif.ksvm.tuned[[4]]
+## Tune result:
+## Op. pars: C=2; sigma=1
+## mmce.test.mean=0.025
+## 
+## $`iris-example`$classif.ksvm.tuned[[5]]
+## Tune result:
+## Op. pars: C=1; sigma=1
+## mmce.test.mean=0.025
 </code></pre>
 
 <h3 id="example-3-one-task-two-learners-feature-selection">Example 3: One task, two learners, feature selection</h3>
@@ -418,7 +559,7 @@ ctrl = makeFeatSelControlSequential(beta = 100, method = &quot;sfs&quot;)
 inner.rdesc = makeResampleDesc(&quot;CV&quot;, iter = 2)
 
 ## Feature selection with sequential forward search (sfs)
-lrn = makeFeatSelWrapper(&quot;classif.lda&quot;, resampling = inner.rdesc, control = ctrl,
+lrn = makeFeatSelWrapper(&quot;classif.lda&quot;, resampling = inner.rdesc, control = ctrl, 
     show.info = FALSE)
 
 ## Let's compare two learners
@@ -434,42 +575,39 @@ res = benchmark(tasks = iris.task, learners = lrns, resampling = rdesc, show.inf
 <pre class="prettyprint well"><code>## [FeatSel] Started selecting features for learner 'classif.lda'
 ## With control class: FeatSelControlSequential
 ## Imputation value: 1
-## [FeatSel] 1: 0 bits: mmce.test.mean=0.65
-## [FeatSel] 2: 1 bits: mmce.test.mean=0.23
-## [FeatSel] 2: 1 bits: mmce.test.mean=0.53
-## [FeatSel] 2: 1 bits: mmce.test.mean=0.05
-## [FeatSel] 2: 1 bits: mmce.test.mean=0.05
+## [FeatSel] 1: 0 bits: mmce.test.mean= 0.7
+## [FeatSel] 2: 1 bits: mmce.test.mean=0.32
+## [FeatSel] 2: 1 bits: mmce.test.mean=0.54
+## [FeatSel] 2: 1 bits: mmce.test.mean=0.06
+## [FeatSel] 2: 1 bits: mmce.test.mean=0.02
 ## [FeatSel] 3: 2 bits: mmce.test.mean=0.03
-## [FeatSel] 3: 2 bits: mmce.test.mean=0.04
-## [FeatSel] 3: 2 bits: mmce.test.mean=0.03
-## [FeatSel] 4: 3 bits: mmce.test.mean=0.03
-## [FeatSel] 4: 3 bits: mmce.test.mean=0.01
-## [FeatSel] 5: 4 bits: mmce.test.mean=0.03
-## [FeatSel] Result: 3 bits : mmce.test.mean=0.01
+## [FeatSel] 3: 2 bits: mmce.test.mean=0.01
+## [FeatSel] 3: 2 bits: mmce.test.mean=0.05
+## [FeatSel] Result: 1 bits : mmce.test.mean=0.02
 ## [FeatSel] Started selecting features for learner 'classif.lda'
 ## With control class: FeatSelControlSequential
 ## Imputation value: 1
-## [FeatSel] 1: 0 bits: mmce.test.mean=0.63
+## [FeatSel] 1: 0 bits: mmce.test.mean=0.73
 ## [FeatSel] 2: 1 bits: mmce.test.mean=0.29
-## [FeatSel] 2: 1 bits: mmce.test.mean=0.48
+## [FeatSel] 2: 1 bits: mmce.test.mean=0.46
 ## [FeatSel] 2: 1 bits: mmce.test.mean=0.05
 ## [FeatSel] 2: 1 bits: mmce.test.mean=0.04
+## [FeatSel] 3: 2 bits: mmce.test.mean=0.05
+## [FeatSel] 3: 2 bits: mmce.test.mean=0.05
 ## [FeatSel] 3: 2 bits: mmce.test.mean=0.04
-## [FeatSel] 3: 2 bits: mmce.test.mean=0.07
-## [FeatSel] 3: 2 bits: mmce.test.mean=0.06
 ## [FeatSel] Result: 1 bits : mmce.test.mean=0.04
 ## [FeatSel] Started selecting features for learner 'classif.lda'
 ## With control class: FeatSelControlSequential
 ## Imputation value: 1
-## [FeatSel] 1: 0 bits: mmce.test.mean=0.61
-## [FeatSel] 2: 1 bits: mmce.test.mean=0.31
-## [FeatSel] 2: 1 bits: mmce.test.mean=0.42
-## [FeatSel] 2: 1 bits: mmce.test.mean=0.06
-## [FeatSel] 2: 1 bits: mmce.test.mean=0.03
-## [FeatSel] 3: 2 bits: mmce.test.mean=0.03
-## [FeatSel] 3: 2 bits: mmce.test.mean=0.03
-## [FeatSel] 3: 2 bits: mmce.test.mean=0.03
-## [FeatSel] Result: 1 bits : mmce.test.mean=0.03
+## [FeatSel] 1: 0 bits: mmce.test.mean=0.65
+## [FeatSel] 2: 1 bits: mmce.test.mean=0.25
+## [FeatSel] 2: 1 bits: mmce.test.mean=0.47
+## [FeatSel] 2: 1 bits: mmce.test.mean=0.05
+## [FeatSel] 2: 1 bits: mmce.test.mean=0.01
+## [FeatSel] 3: 2 bits: mmce.test.mean=0.01
+## [FeatSel] 3: 2 bits: mmce.test.mean=0.01
+## [FeatSel] 3: 2 bits: mmce.test.mean=0.02
+## [FeatSel] Result: 1 bits : mmce.test.mean=0.01
 </code></pre>
 
 <pre class="prettyprint well"><code class="r">res
@@ -477,7 +615,7 @@ res = benchmark(tasks = iris.task, learners = lrns, resampling = rdesc, show.inf
 
 <pre class="prettyprint well"><code>##           task             learner mmce.test.mean
 ## 1 iris-example       classif.rpart        0.06667
-## 2 iris-example classif.lda.featsel        0.04667
+## 2 iris-example classif.lda.featsel        0.06667
 </code></pre>
 
 <pre class="prettyprint well"><code class="r">## Which features have been selected (in the outer resampling steps)?
@@ -491,8 +629,8 @@ getFeatSelResult(res)
 ## $`iris-example`$classif.lda.featsel
 ## $`iris-example`$classif.lda.featsel[[1]]
 ## FeatSel result:
-## Features (3): Sepal.Length, Petal.Length, Petal.Width
-## mmce.test.mean=0.01
+## Features (1): Petal.Width
+## mmce.test.mean=0.02
 ## 
 ## $`iris-example`$classif.lda.featsel[[2]]
 ## FeatSel result:
@@ -502,7 +640,7 @@ getFeatSelResult(res)
 ## $`iris-example`$classif.lda.featsel[[3]]
 ## FeatSel result:
 ## Features (1): Petal.Width
-## mmce.test.mean=0.03
+## mmce.test.mean=0.01
 </code></pre>
 
 <pre class="prettyprint well"><code class="r">## Performances on individual test data sets
@@ -511,9 +649,9 @@ getPerformances(res)
 
 <pre class="prettyprint well"><code>## $`iris-example`
 ##   iter classif.rpart.mmce classif.lda.featsel.mmce
-## 1    1               0.10                     0.04
+## 1    1               0.06                     0.06
 ## 2    2               0.04                     0.04
-## 3    3               0.06                     0.06
+## 3    3               0.10                     0.10
 </code></pre>
 
 </div>
