--- a/tutorial/html/benchmark_experiments/index.html
+++ b/tutorial/html/benchmark_experiments/index.html
@@ -351,18 +351,18 @@ ps = makeParamSet(makeDiscreteParam(&quot;k&quot;, 1:5))
 ctrl = makeTuneControlGrid()
 
 ## Define &quot;inner&quot; cross-validation indices
-inner.rdesc = makeResampleDesc(&quot;CV&quot;, iters = 3)
+in.rdesc = makeResampleDesc(&quot;CV&quot;, iters = 3)
 
 ## Tune k-nearest neighbor
-lrn = makeTuneWrapper(&quot;classif.kknn&quot;, resampling = inner.rdesc, par.set = ps, control = ctrl,
+lrn = makeTuneWrapper(&quot;classif.kknn&quot;, resampling = in.rdesc, par.set = ps, control = ctrl,
     show.info = FALSE)
 
 ## Define &quot;outer&quot; bootstrap indices
-rdesc = makeResampleDesc(&quot;Bootstrap&quot;, iters = 5)
+out.rdesc = makeResampleDesc(&quot;Bootstrap&quot;, iters = 5)
 
 ## Merge it into a benchmark experiment
 ## Choose accuracy instead of default measure mean misclassification error
-res = benchmark(lrn, iris.task, rdesc, measure = acc, show.info = FALSE)
+res = benchmark(lrn, iris.task, out.rdesc, measure = acc, show.info = FALSE)
 res
 </code></pre>
 
@@ -429,20 +429,20 @@ ps = makeParamSet(makeDiscreteParam(&quot;C&quot;, 2^seq(-1,1)),
 ctrl = makeTuneControlGrid()
 
 ## Define &quot;inner&quot; cross-validation indices
-inner.rdesc = makeResampleDesc(&quot;CV&quot;, iters = 3)
+in.rdesc = makeResampleDesc(&quot;CV&quot;, iters = 3)
 
 ## Tune a SVM
-lrn = makeTuneWrapper(&quot;classif.ksvm&quot;, resampling = inner.rdesc, par.set = ps, control = ctrl,
+lrn = makeTuneWrapper(&quot;classif.ksvm&quot;, resampling = in.rdesc, par.set = ps, control = ctrl,
     show.info = FALSE)
 
 ## Three learners to be compared
 lrns = list(makeLearner(&quot;classif.lda&quot;), makeLearner(&quot;classif.rpart&quot;), lrn)
 
 ## Define &quot;outer&quot; cross-validation indices
-rdesc = makeResampleDesc(&quot;CV&quot;, iters = 5)
+out.rdesc = makeResampleDesc(&quot;CV&quot;, iters = 5)
 
 ## Merge it to a benchmark experiment
-res = benchmark(lrns, tasks, rdesc, show.info = FALSE)
+res = benchmark(lrns, tasks, out.rdesc, show.info = FALSE)
 res
 </code></pre>
 
@@ -556,20 +556,20 @@ a benchmark experiment:</p>
 ctrl = makeFeatSelControlSequential(beta = 100, method = &quot;sfs&quot;)
 
 ## Inner resampling
-inner.rdesc = makeResampleDesc(&quot;CV&quot;, iter = 2)
+in.rdesc = makeResampleDesc(&quot;CV&quot;, iter = 2)
 
 ## Feature selection with sequential forward search (sfs)
-lrn = makeFeatSelWrapper(&quot;classif.lda&quot;, resampling = inner.rdesc, control = ctrl, 
+lrn = makeFeatSelWrapper(&quot;classif.lda&quot;, resampling = in.rdesc, control = ctrl, 
     show.info = FALSE)
 
 ## Let's compare two learners
 lrns = list(makeLearner(&quot;classif.rpart&quot;), lrn)
 
 ## Define outer resampling
-rdesc = makeResampleDesc(&quot;Subsample&quot;, iter = 3)
+out.rdesc = makeResampleDesc(&quot;Subsample&quot;, iter = 3)
 
 ## Benchmark experiment
-res = benchmark(tasks = iris.task, learners = lrns, resampling = rdesc, show.info = FALSE)
+res = benchmark(tasks = iris.task, learners = lrns, resampling = out.rdesc, show.info = FALSE)
 </code></pre>
 
 <pre class="prettyprint well"><code>## [FeatSel] Started selecting features for learner 'classif.lda'
