threshold: setting and tuning (Fixes #8)

--- a/tutorial/html/learner/index.html
+++ b/tutorial/html/learner/index.html
@@ -253,7 +253,7 @@ surv.lrn = makeLearner(&quot;surv.coxph&quot;, id = &quot;coxph&quot;)
 ## 
 ## Attaching package: 'survival'
 ## 
-## Das folgende Objekt ist maskiert from 'package:caret':
+## The following object is masked from 'package:caret':
 ## 
 ##     cluster
 </code></pre>
