--- a/tutorial/html/resample/index.html
+++ b/tutorial/html/resample/index.html
@@ -276,7 +276,7 @@ r = resample(&quot;surv.coxph&quot;, lung.task, rdesc)
 ## 
 ## Attaching package: 'survival'
 ## 
-## Das folgende Objekt ist maskiert from 'package:caret':
+## The following object is masked from 'package:caret':
 ## 
 ##     cluster
 ## 
@@ -347,7 +347,7 @@ r = resample(&quot;cluster.XMeans&quot;, mtcars.task, rdesc, measures = list(dun
 <pre class="prettyprint well"><code>## Error: Required Weka package 'XMeans' is not installed.
 </code></pre>
 
-<pre class="prettyprint well"><code>## Timing stopped at: 0.065 0.007 0.071
+<pre class="prettyprint well"><code>## Timing stopped at: 0.069 0.008 0.118
 </code></pre>
 
 <pre class="prettyprint well"><code class="r">r$aggr
