--- a/tutorial/html/train/index.html
+++ b/tutorial/html/train/index.html
@@ -241,7 +241,7 @@ lrn = makeLearner(&quot;surv.coxph&quot;)
 ## 
 ## Attaching package: 'survival'
 ## 
-## Das folgende Objekt ist maskiert from 'package:caret':
+## The following object is masked from 'package:caret':
 ## 
 ##     cluster
 </code></pre>
@@ -331,7 +331,7 @@ train(&quot;classif.cforest&quot;, task = bc.task, weights = w)
 ## 
 ## Attaching package: 'grid'
 ## 
-## Das folgende Objekt ist maskiert from 'package:BBmisc':
+## The following object is masked from 'package:BBmisc':
 ## 
 ##     explode
 ## 
@@ -339,7 +339,7 @@ train(&quot;classif.cforest&quot;, task = bc.task, weights = w)
 ## 
 ## Attaching package: 'zoo'
 ## 
-## Die folgenden Objekte sind maskiert from 'package:base':
+## The following objects are masked from 'package:base':
 ## 
 ##     as.Date, as.Date.numeric
 ## 
